# wave_parse

./: .gitignore  .gitmodules  README.md  VCD_FST_Library_Comparison_Report.md  benchmark_report.md  package-lock.json  package.json  playwright.config.ts
benchmarks/: generate_testdata.py  report.py  run_all.py
benchmarks/python/: bench_pylibfst.py  bench_pywellen.py  bench_vcdvcd.py  setup_envs.sh
benchmarks/results/: combined_large.json  combined_medium.json  combined_small.json  rust_bench.json  venv_pylibfst.json  venv_pywellen.json  venv_vcdvcd.json
benchmarks/rust/: Cargo.toml
benchmarks/rust/src/: main.rs
docs/: index.html
tests/: webpage.spec.ts
vcd-ng/: .cargo_vcs_info.json  Cargo.toml
vcd-ng/src/: fastflow.rs
