[package]
name = "wave-bench"
version = "0.1.0"
edition = "2021"
resolver = "2"

[dependencies]
# VCD + FST full-featured loader
wellen = { path = "../../wellen/wellen", default-features = false }

# Streaming VCD parser (rust-vcd)
vcd = { path = "../../rust-vcd", default-features = false }

# Fast VCD parser (vcd-ng) with FastFlow
vcd-ng = { path = "../../vcd-ng", default-features = false }

# Pure-Rust FST reader
fst-reader = { path = "../../fst-reader", default-features = false }

# C-binding FST API
fstapi = { path = "../../fst-tools/fstapi", default-features = false }

# JSON output
serde = { version = "1", features = ["derive"] }
serde_json = "1"
